# paladin

./: Cargo.toml  README.md  docker-compose.yml  orchestrator.Dockerfile  worker.Dockerfile
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: check.yml  ci.yml  clippy.yml  docs.yml  fmt.yml  test.yml
examples/hello-world-rabbitmq/: .env  Cargo.toml  README.md  docker-compose.yml  leader.Dockerfile  worker.Dockerfile
examples/hello-world-rabbitmq/leader/: Cargo.toml
examples/hello-world-rabbitmq/leader/src/: main.rs
examples/hello-world-rabbitmq/ops/: Cargo.toml
examples/hello-world-rabbitmq/ops/src/: lib.rs
examples/hello-world-rabbitmq/worker/: Cargo.toml
examples/hello-world-rabbitmq/worker/src/: main.rs
opkind_derive/: Cargo.toml
opkind_derive/src/: lib.rs
ops/: Cargo.toml
ops/src/: lib.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
paladin/: Cargo.toml
paladin-core/: Cargo.toml  README.md
paladin-core/src/: acker.rs  lib.rs
paladin-core/src/channel/: mod.rs  queue.rs
paladin-core/src/channel/coordinated_channel/: coordinated_publisher.rs  coordinated_sink.rs  coordinated_stream.rs  mod.rs
paladin-core/src/common/: mod.rs
paladin-core/src/config/: mod.rs
paladin-core/src/contiguous/: queue.rs
paladin-core/src/directive/: mod.rs
paladin-core/src/directive/indexed_stream/: foldable.rs  functor.rs  mod.rs
paladin-core/src/directive/literal/: functor.rs  mod.rs
paladin-core/src/operation/: error.rs  mod.rs
paladin-core/src/queue/: amqp.rs  in_memory.rs  mod.rs  publisher.rs  sink.rs
paladin-core/src/runtime/: dynamic_channel.rs  mod.rs
paladin-core/src/serializer/: mod.rs
paladin-core/src/task/: mod.rs
paladin-opkind-derive/: Cargo.toml
paladin-opkind-derive/src/: lib.rs
paladin/src/: acker.rs  lib.rs
paladin/src/channel/: dynamic.rs  mod.rs  queue.rs
paladin/src/channel/coordinated_channel/: coordinated_sink.rs  coordinated_stream.rs  mod.rs
paladin/src/config/: mod.rs
paladin/src/contiguous/: mod.rs  queue.rs
paladin/src/directive/: mod.rs
paladin/src/directive/evaluator/: mod.rs
paladin/src/directive/evaluator/runtime/: apply.rs  fold.rs  map.rs  mod.rs
paladin/src/directive/indexed_stream/: functor.rs  mod.rs
paladin/src/global/: mod.rs
paladin/src/operation/: mod.rs
paladin/src/queue/: amqp.rs  in_memory.rs  mod.rs  sink.rs
paladin/src/runtime/: dynamic_channel.rs  mod.rs  worker.rs
paladin/src/serializer/: mod.rs
paladin/src/task/: mod.rs
worker/: Cargo.toml
worker/src/: main.rs
