[package]
name = "opkind_derive"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.31"
quote = "1.0.33"

[lib]
proc-macro = true
