[package]
name = "paladin-core"
version = "0.4.3"
description = "A Rust distributed algorithm toolkit. Write distributed algorithms without the complexities of distributed systems programming."
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "paladin"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
dotenvy = "0.15.7"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lapin = "2.3.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.8"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
serde = "1.0.183"
async-trait = "0.1.73"
ciborium = "0.2.1"
futures = "0.3.28"
clap = { version = "4.4.2", features = ["derive", "env"] }
pin-project = "1.1.3"
thiserror = "1.0.50"
backoff = { version = "0.4.0", features = ["tokio"] }
dashmap = "5.5.3"
bytes = { version = "1.5.0", features = ["std", "serde"] }
crossbeam = "0.8.2"
postcard = { version = "1.0.8", features = ["use-std"] }
linkme = "0.3.17"
crossbeam-skiplist = "0.1.1"
paladin-opkind-derive =  { path = "../paladin-opkind-derive" }

[dev-dependencies]
# Required for certain doc tests which showcase generic numeric operations
num-traits = "0.2.16"
