[package]
name = "leader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
clap = { version = "4.4.2", features = ["derive", "env"] }

paladin = { path = "../../../paladin" }
ops = { path = "../ops" }
